static linking might work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,28 +4,38 @@ project(GAMEARCH)
 # INCLUDE MY CUSTOM HELPER STUFF
 INCLUDE(Custom_CMake_Utils.cmake)
 
+IF(WIN32)
+	SET(CMAKE_CXX_FLAGS "-g -DGLEW_STATIC -static -static-libgcc -static-libstdc++ -std=c++0x")
+	
+	SET(SFML_STATIC_LIBRARIES "TRUE")
+ENDIF(WIN32)
+
+
 # Set location to output binaries
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${GAMEARCH_SOURCE_DIR}/bin)
-set(CMAKE_INCLUDE_PATH "${GAMEARCH_SOURCE_DIR}/include")
+set(CMAKE_INCLUDE_PATH "${GAMEARCH_SOUR//CE_DIR}/include")
 
-include_directories("${GAMEARCH_SOURCE_DIR}/include")
+##include_directories("${GAMEARCH_SOURCE_DIR}/include")
 
 # ADD GLEW AND SFML OR GLFW STUFF HERE OR DEEPER
 
 # These next two are pretty much the same
 #set(CMAKE_CXX_FLAGS "-g -std=c++0x")
 #add_definitions("-g -std=c++0x")
-add_definitions("-g -std=c++0x -DGLEW_STATIC -static")
+##add_definitions("-g -std=c++0x -DGLEW_STATIC -static")
 #add_subdirectory(src)
 
-IF(WIN32)
-    set(SFMLDIR "C:/MinGW/")
-ENDIF()
+##IF(WIN32)
+##    set(SFMLDIR "C:/MinGW/")
+##ENDIF()
 find_package(SFML 2 REQUIRED system window graphics network audio)
 
 find_package(GLEW REQUIRED)
 include_directories(${GLEW_INCLUDE_PATH})
 
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+		
 ## ADD AN EXECUTABLE TO BUILD
 ## FORMAT :
 ##   SET(PROGRAM_NAMES <executable_name>)
@@ -61,12 +71,12 @@ foreach(CURRENT_PROGRAM ${PROGRAM_NAMES})
 
     target_link_libraries(${CURRENT_PROGRAM} ${GLEW_LIBRARY})
 
-    IF(WIN32)
-        target_link_libraries(${CURRENT_PROGRAM} opengl32)
-    ELSE()
-        find_package(OpenGL REQUIRED)
-        include_directories(${OPENGL_INCLUDE_DIR})
-        TARGET_LINK_LIBRARIES(${program} ${OPENGL_LIBRARIES})
-    ENDIF()
+    ##IF(WIN32)
+    ##    target_link_libraries(${CURRENT_PROGRAM} opengl32)
+    ##ELSE()
+        TARGET_LINK_LIBRARIES(${CURRENT_PROGRAM} ${OPENGL_LIBRARIES})
+	##	find_package(OpenGL REQUIRED)
+    ##    include_directories(${OPENGL_INCLUDE_DIR})
+    ##ENDIF()
 endforeach(CURRENT_PROGRAM)
 
